--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "socket.io": "0.9.10"
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   }
 }
